--- a/renderer/pdf_viewer.css
+++ b/renderer/pdf_viewer.css
@@ -1933,7 +1933,7 @@
     width:-moz-fit-content;
     width:fit-content;
     height:var(--editor-toolbar-height);
-    flex-direction:column;
+    flex-direction:row;
     justify-content:center;
     align-items:center;
     cursor:default;
@@ -2026,6 +2026,10 @@
                   mask-position:center;
           display:inline-block;
           background-color:var(--editor-toolbar-fg-color);
+          background-image:var(--editor-toolbar-delete-image);
+          background-repeat:no-repeat;
+          background-position:center;
+          background-size:16px 16px;
           width:100%;
           height:100%;
         }
@@ -2885,6 +2889,7 @@
   padding-inline:10px;
   padding-block-end:12px;
 }
+
 
 #highlightParamsToolbarContainer .colorPicker{
     display:flex;
